# Bitary

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.f003b4f  compile_commands.json
.cache/clangd/index/: main.cpp.59A5D3E221CD58EF.idx  window.cpp.F23283A456DC473A.idx  window.h.8F9AE68ECBCDCE88.idx
src/: main.cpp
src/forms/: addBookPopUpWindow.ui  addBorrowPopUpWindow.ui  borrowBookPopUpWindow.ui  logInPageWindow.ui  window.ui
src/include/ui/: window.h
src/tests/: tests.c  tests.h
src/ui/: addBookPopUpWindow.ui  bookPopUpWindow.ui  borrowBookPopUpWindow.ui  buttons.cpp  dialog.cpp  dialog.h  logInPageWindow.ui  mainTable.cpp  mainTable.h  mainTableModel.cpp  mainTableModel.h  tests.cpp  window.cpp  window.h  window.ui
